[gd_scene load_steps=2 format=3 uid="uid://b8j2k3l4m5n6o7p8"]

[ext_resource type="Script" path="res://addons/stackable_features_manager/ui/module_manager_dock.gd" id="1_1a2b3c"]

[node name="ModuleManagerDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1a2b3c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stackable Features Manager"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModuleList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = ""
tooltip_text = "Create New Module"

[node name="ImportButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import from GitHub"

[node name="RefreshButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready"
horizontal_alignment = 1 